--- a/src/app/angular-bootstrap/home/home.component.html
+++ b/src/app/angular-bootstrap/home/home.component.html
@@ -1,3 +1,6 @@
+
+<h1 class="text-center mt-5 mb-5">Angular -Bootstrap5</h1>
+
 <div class="container-fluid">
     <div class="row">
         <!-- USER FORM START -->
