--- a/src/app/angular-bootstrap/home/home.component.html
+++ b/src/app/angular-bootstrap/home/home.component.html
@@ -23,11 +23,13 @@
                               Dropdown Variable1
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                              <li><a class="dropdown-item active" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
+                              <li *ngFor="let item of variabledata.data.data.variable1" >
+                                <a class="dropdown-item active" href="#">{{item.variable}}</a>
+                              </li>
+                              <!-- <li><a class="dropdown-item" href="#">Another action</a></li>
                               <li><a class="dropdown-item" href="#">Something else here</a></li>
                               <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Separated link</a></li>
+                              <li><a class="dropdown-item" href="#">Separated link</a></li> -->
                             </ul>
                           </div>
                       </div>
