--- a/src/app/angular-bootstrap/home/home.component.html
+++ b/src/app/angular-bootstrap/home/home.component.html
@@ -33,8 +33,8 @@
                               Dropdown Variable1
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2" *ngIf="variabledata">
-                              <li *ngFor="let item of variabledata">
-                                <a class="dropdown-item active" href="#">{{item.variable}}</a>
+                              <li *ngFor="let data of variabledata">
+                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
                               </li>
                               <!-- <li><a class="dropdown-item" href="#">Another action</a></li>
                               <li><a class="dropdown-item" href="#">Something else here</a></li>
