--- a/src/app/angular-bootstrap/home/home.component.html
+++ b/src/app/angular-bootstrap/home/home.component.html
@@ -32,14 +32,10 @@
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                               Dropdown Variable1
                             </button>
-                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2" *ngIf="variabledata">
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                               <li *ngFor="let data of variabledata">
                                 <a class="dropdown-item active" href="#">{{data.variable}}</a>
                               </li>
-                              <!-- <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                              <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Separated link</a></li> -->
                             </ul>
                           </div>
                       </div>
