--- a/src/app/angular-bootstrap/home/home.component.html
+++ b/src/app/angular-bootstrap/home/home.component.html
@@ -46,11 +46,9 @@
                           Dropdown Variable2
                         </button>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                          <li><a class="dropdown-item active" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Separated link</a></li>
+                          <li *ngFor="let data of variabledata?.variable2">
+                            <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                          </li>
                         </ul>
                       </div>
                      </div>
