--- a/src/app/angular-bootstrap/home/home.component.html
+++ b/src/app/angular-bootstrap/home/home.component.html
@@ -59,11 +59,9 @@
                               Dropdown Variable3
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                              <li><a class="dropdown-item active" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                              <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Separated link</a></li>
+                              <li *ngFor="let data of variabledata?.variable3">
+                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                              </li>
                             </ul>
                           </div>
                      </div>
@@ -74,11 +72,9 @@
                               Dropdown Variable4
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                              <li><a class="dropdown-item active" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                              <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Separated link</a></li>
+                              <li *ngFor="let data of variabledata?.variable4">
+                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                              </li>
                             </ul>
                           </div>
                      </div>
