--- a/src/app/angular-bootstrap/home/home.component.html
+++ b/src/app/angular-bootstrap/home/home.component.html
@@ -89,11 +89,9 @@
                           Dropdown Variable5
                         </button>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                          <li><a class="dropdown-item active" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Separated link</a></li>
+                          <li *ngFor="let data of variabledata?.variable5">
+                            <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                          </li>
                         </ul>
                       </div>
                      </div>
@@ -104,11 +102,9 @@
                               Dropdown Variable6
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                              <li><a class="dropdown-item active" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                              <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Separated link</a></li>
+                              <li *ngFor="let data of variabledata?.variable6">
+                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                              </li>
                             </ul>
                           </div>
                      </div>
@@ -119,11 +115,9 @@
                           Dropdown Variable7
                         </button>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                          <li><a class="dropdown-item active" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Separated link</a></li>
+                          <li *ngFor="let data of variabledata?.variable7">
+                            <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -134,11 +128,9 @@
                               Dropdown Variable8
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                              <li><a class="dropdown-item active" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                              <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Separated link</a></li>
+                              <li *ngFor="let data of variabledata?.variable8">
+                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                              </li>
                             </ul>
                           </div>
                     </div>
@@ -149,11 +141,9 @@
                               Dropdown Variable9
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                              <li><a class="dropdown-item active" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                              <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Separated link</a></li>
+                              <li *ngFor="let data of variabledata?.variable9">
+                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                              </li>
                             </ul>
                           </div>
                     </div>
