--- a/src/app/angular-bootstrap/home/home.component.html
+++ b/src/app/angular-bootstrap/home/home.component.html
@@ -19,7 +19,7 @@
           <div class="col-lg-12">
             <div class="card radius-10 Formcard">
               <div class="card-body">
-                <form>
+                <form [formGroup]="dropDownVariables" (ngSubmit)="SubmitOrder()">
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <h6 class="mb-0">Edit Profile</h6>
                         <button class="btn settingbtn">Settings</button>
@@ -34,7 +34,7 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                               <li *ngFor="let data of variabledata?.variable1">
-                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                                <a class="dropdown-item active" href="#" formControlName="variable1">{{data.variable}}</a>
                               </li>
                             </ul>
                           </div>
@@ -47,7 +47,7 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                           <li *ngFor="let data of variabledata?.variable2">
-                            <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                            <a class="dropdown-item active" href="#" formControlName="variable2">{{data.variable}}</a>
                           </li>
                         </ul>
                       </div>
@@ -60,7 +60,7 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                               <li *ngFor="let data of variabledata?.variable3">
-                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                                <a class="dropdown-item active" href="#" formControlName="variable3">{{data.variable}}</a>
                               </li>
                             </ul>
                           </div>
@@ -73,7 +73,7 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                               <li *ngFor="let data of variabledata?.variable4">
-                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                                <a class="dropdown-item active" href="#" formControlName="variable4">{{data.variable}}</a>
                               </li>
                             </ul>
                           </div>
@@ -90,7 +90,7 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                           <li *ngFor="let data of variabledata?.variable5">
-                            <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                            <a class="dropdown-item active" href="#" formControlName="variable5">{{data.variable}}</a>
                           </li>
                         </ul>
                       </div>
@@ -103,7 +103,7 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                               <li *ngFor="let data of variabledata?.variable6">
-                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                                <a class="dropdown-item active" href="#" formControlName="variable6">{{data.variable}}</a>
                               </li>
                             </ul>
                           </div>
@@ -116,7 +116,7 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                           <li *ngFor="let data of variabledata?.variable7">
-                            <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                            <a class="dropdown-item active" href="#" formControlName="variable7">{{data.variable}}</a>
                           </li>
                         </ul>
                       </div>
@@ -129,7 +129,7 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                               <li *ngFor="let data of variabledata?.variable8">
-                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                                <a class="dropdown-item active" href="#" formControlName="variable8">{{data.variable}}</a>
                               </li>
                             </ul>
                           </div>
@@ -142,7 +142,7 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                               <li *ngFor="let data of variabledata?.variable9">
-                                <a class="dropdown-item active" href="#">{{data.variable}}</a>
+                                <a class="dropdown-item active" href="#" formControlName="variable9">{{data.variable}}</a>
                               </li>
                             </ul>
                           </div>
@@ -155,6 +155,7 @@
                     <div class="text-start mt-3">
                       <button type="button" class="btn px-4" style="background-color: #2ea963;color:white">Save Changes</button>
                     </div>
+                    <button class="btn btn-success">Submit Form</button>
                     </form>
               </div>
             </div>
