--- a/src/app/angular-bootstrap/home/home.component.html
+++ b/src/app/angular-bootstrap/home/home.component.html
@@ -27,10 +27,56 @@
                     <h6 class="mb-0 mt-4 text-secondary">USER INFORMATION</h6>
                     <hr>
                     <div class="row g-3">
-                      <label></label>
-                      <select formControlName="variable1"  class="form-control" >
+                      <h3> Variable 1</h3>
+                      <select formControlName="variable1"  class="form-control" placeholder="seelct" >
+                        <option disabled>Select Website</option>
                         <option *ngFor="let data of variabledata?.variable1">{{data.variable}}</option>
                     </select>
+
+                    <h3> Variable 1</h3>
+                    <select formControlName="variable2"  class="form-control" >
+                      <option *ngFor="let data of variabledata?.variable2">{{data.variable}}</option>
+                  </select>
+
+                  <h3> Variable 1</h3>
+                  <select formControlName="variable3"  class="form-control" >
+                    <option *ngFor="let data of variabledata?.variable3">{{data.variable}}</option>
+                </select>
+                  
+                <h3> Variable 1</h3>
+                <select formControlName="variable4"  class="form-control" >
+                  <option *ngFor="let data of variabledata?.variable4">{{data.variable}}</option>
+              </select>
+
+              <h3> Variable 1</h3>
+              <select formControlName="variable5"  class="form-control" >
+                <option *ngFor="let data of variabledata?.variable5">{{data.variable}}</option>
+            </select>
+
+
+            <h3> Variable 1</h3>
+            <select formControlName="variable6"  class="form-control" >
+              <option *ngFor="let data of variabledata?.variable6">{{data.variable}}</option>
+          </select>
+
+
+          <h3> Variable 1</h3>
+          <select formControlName="variable7"  class="form-control" >
+            <option *ngFor="let data of variabledata?.variable7">{{data.variable}}</option>
+        </select>
+
+           
+
+        <h3> Variable 1</h3>
+        <select formControlName="variable8"  class="form-control" >
+          <option *ngFor="let data of variabledata?.variable8">{{data.variable}}</option>
+      </select>
+
+       
+      <h3> Variable 1</h3>
+      <select formControlName="variable9"  class="form-control" >
+        <option *ngFor="let data of variabledata?.variable9">{{data.variable}}</option>
+    </select>
                       <div class="col-6">
 
                         <div class="dropdown">
