--- a/src/app/angular-bootstrap/home/home.component.html
+++ b/src/app/angular-bootstrap/home/home.component.html
@@ -76,4 +76,4 @@
         </div>
       </div>
 
-      <app-testing-com [MyVariables]="variabledata"></app-testing-com>
+      <!-- <app-testing-com [MyVariables]="variabledata"></app-testing-com> -->
