--- a/src/app/angular-bootstrap/testing-com/testing-com.component.html
+++ b/src/app/angular-bootstrap/testing-com/testing-com.component.html
@@ -1,4 +1,6 @@
 
 <app-layout>
-    <h1></h1>
+    <select   class="form-control" >
+        <option *ngFor="let data of variables?.variable9">{{data.variable}}</option>
+    </select>
 </app-layout>
