--- a/src/app/angular-bootstrap/testing-com/testing-com.component.html
+++ b/src/app/angular-bootstrap/testing-com/testing-com.component.html
@@ -1,6 +1,35 @@
 
 <app-layout>
+    <h2 class="mt-5">Testing Component</h2>
+
+
+    <h2>Variable 1</h2>
     <select   class="form-control" >
         <option *ngFor="let data of variables?.variable1">{{data.variable}}</option>
+    </select>
+
+    <h2>Variable 2</h2>
+    <select   class="form-control" >
+        <option *ngFor="let data of variables?.variable2">{{data.variable}}</option>
+    </select>
+
+    <h2>Variable 3</h2>
+    <select   class="form-control" >
+        <option *ngFor="let data of variables?.variable3">{{data.variable}}</option>
+    </select>
+
+    <h2>Variable 4</h2>
+    <select   class="form-control" >
+        <option *ngFor="let data of variables?.variable4">{{data.variable}}</option>
+    </select>
+
+    <h2>Variable 5</h2>
+    <select   class="form-control" >
+        <option *ngFor="let data of variables?.variable5">{{data.variable}}</option>
+    </select>
+
+    <h2>Variable 6</h2>
+    <select   class="form-control" >
+        <option *ngFor="let data of variables?.variable6">{{data.variable}}</option>
     </select>
 </app-layout>
