--- a/src/app/angular-bootstrap/testing-com/testing-com.component.html
+++ b/src/app/angular-bootstrap/testing-com/testing-com.component.html
@@ -32,6 +32,6 @@
     <select formControlName="variable6"  class="form-control" >
         <option *ngFor="let data of variables?.variable6">{{data.variable}}</option>
     </select>
-    <button class="btn btn-success" type="submit">Submit Form</button>
+    <button class="btn btn-success mt-5" type="submit">Submit Form</button>
 </form>
 </app-layout>
