--- a/src/app/angular-material/home/home.component.html
+++ b/src/app/angular-material/home/home.component.html
@@ -1,7 +1,18 @@
+
 <mat-tab-group>
-  <mat-tab label="From-1"> Content 1 </mat-tab>
-  <mat-tab label="From-2"> Content 2 </mat-tab>
-  <mat-tab label="From-3"> Content 3 </mat-tab>
-  <mat-tab label="From-4"> Content 4 </mat-tab>
-  <mat-tab label="From-5"> Content 5 </mat-tab>
+  <mat-tab label="From-1"> 
+    <app-form1></app-form1>
+  </mat-tab>
+  <mat-tab label="From-2">
+     <app-form2></app-form2>
+    </mat-tab>
+  <mat-tab label="From-3">
+     <app-form3></app-form3>
+    </mat-tab>
+  <mat-tab label="From-4">
+     <app-form4></app-form4>
+    </mat-tab>
+  <mat-tab label="From-5">
+     <app-form5></app-form5>
+    </mat-tab>
 </mat-tab-group>
