--- a/src/app/angular-material/home/home.component.html
+++ b/src/app/angular-material/home/home.component.html
@@ -1,4 +1,4 @@
-
+<ng-container>
 <mat-tab-group>
   <mat-tab label="From-1"> 
     <app-form1></app-form1>
@@ -16,3 +16,4 @@
      <app-form5></app-form5>
     </mat-tab>
 </mat-tab-group>
+</ng-container>
