--- a/src/app/angular-material/mat-tab-forms/form1/form1.component.html
+++ b/src/app/angular-material/mat-tab-forms/form1/form1.component.html
@@ -1,1 +1,11 @@
-<p>form1 works!</p>
+<div class="form">
+<mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select >
+      <mat-option>None</mat-option>
+      <mat-option value="option1">Option 1</mat-option>
+      <mat-option value="option2">Option 2</mat-option>
+      <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
