--- a/src/app/angular-material/mat-tab-forms/form1/form1.component.html
+++ b/src/app/angular-material/mat-tab-forms/form1/form1.component.html
@@ -1,4 +1,6 @@
-<div class="form">
+<div class="ms-5 row">
+  
+    <div class="col-12"> 
 <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
@@ -8,4 +10,55 @@
       <mat-option value="option3">Option 3</mat-option>
     </mat-select>
   </mat-form-field>
+</div> 
+
+<div class="col-12"> 
+  <mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select >
+      <mat-option>None</mat-option>
+      <mat-option value="option1">Option 1</mat-option>
+      <mat-option value="option2">Option 2</mat-option>
+      <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
+
+<div class="col-12"> 
+  <mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select >
+      <mat-option>None</mat-option>
+      <mat-option value="option1">Option 1</mat-option>
+      <mat-option value="option2">Option 2</mat-option>
+      <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
+<div class="col-12"> 
+  <mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select >
+      <mat-option>None</mat-option>
+      <mat-option value="option1">Option 1</mat-option>
+      <mat-option value="option2">Option 2</mat-option>
+      <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
+<div class="col-12"> 
+  <mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select >
+      <mat-option>None</mat-option>
+      <mat-option value="option1">Option 1</mat-option>
+      <mat-option value="option2">Option 2</mat-option>
+      <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
 </div>
