--- a/src/app/angular-material/home/home.component.html
+++ b/src/app/angular-material/home/home.component.html
@@ -1,3 +1,4 @@
+<app-layout>
 <ng-container>
 <mat-tab-group>
   <mat-tab label="From-1"> 
@@ -17,3 +18,4 @@
     </mat-tab>
 </mat-tab-group>
 </ng-container>
+</app-layout>
