--- a/src/app/angular-material/mat-tab-forms/form1/form1.component.html
+++ b/src/app/angular-material/mat-tab-forms/form1/form1.component.html
@@ -1,5 +1,6 @@
-<div class="ms-5 row">
-  
+<h1 class="h1Heading">Form-1</h1>
+<div class="ms-5 mt-5 row">
+
     <div class="col-12"> 
 <mat-form-field>
     <mat-label>Select</mat-label>
