--- a/src/app/angular-material/mat-tab-forms/form2/form2.component.html
+++ b/src/app/angular-material/mat-tab-forms/form2/form2.component.html
@@ -1,1 +1,64 @@
-<p>form2 works!</p>
+<div class="ms-5 mt-5 row">
+
+    <div class="col-12"> 
+<mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select >
+      <mat-option>None</mat-option>
+      <mat-option value="option1">Option 1</mat-option>
+      <mat-option value="option2">Option 2</mat-option>
+      <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div> 
+
+<div class="col-12"> 
+  <mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select >
+      <mat-option>None</mat-option>
+      <mat-option value="option1">Option 1</mat-option>
+      <mat-option value="option2">Option 2</mat-option>
+      <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
+
+<div class="col-12"> 
+  <mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select >
+      <mat-option>None</mat-option>
+      <mat-option value="option1">Option 1</mat-option>
+      <mat-option value="option2">Option 2</mat-option>
+      <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
+<div class="col-12"> 
+  <mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select >
+      <mat-option>None</mat-option>
+      <mat-option value="option1">Option 1</mat-option>
+      <mat-option value="option2">Option 2</mat-option>
+      <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
+<div class="col-12"> 
+  <mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select >
+      <mat-option>None</mat-option>
+      <mat-option value="option1">Option 1</mat-option>
+      <mat-option value="option2">Option 2</mat-option>
+      <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
+</div>
