--- a/src/app/angular-material/mat-tab-forms/form1/form1.component.html
+++ b/src/app/angular-material/mat-tab-forms/form1/form1.component.html
@@ -2,6 +2,7 @@
 <div class="ms-5 mt-5 row">
 
     <div class="col-12"> 
+      <h2>Variable-1</h2>
 <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
@@ -13,7 +14,8 @@
   </mat-form-field>
 </div> 
 
-<div class="col-12"> 
+<div class="col-12">
+  <h2>Variable-2</h2> 
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
@@ -27,6 +29,7 @@
 
 
 <div class="col-12"> 
+  <h2>Variable-3</h2>
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
@@ -39,6 +42,7 @@
 </div>
 
 <div class="col-12"> 
+  <h2>Variable-4</h2>
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
@@ -51,6 +55,7 @@
 </div>
 
 <div class="col-12"> 
+  <h2>Variable-5</h2>
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
