--- a/src/app/angular-material/mat-tab-forms/form2/form2.component.html
+++ b/src/app/angular-material/mat-tab-forms/form2/form2.component.html
@@ -3,6 +3,7 @@
 <div class="ms-5 mt-5 row">
 
     <div class="col-12"> 
+      <h2>Variable-1</h2>
 <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
@@ -15,6 +16,7 @@
 </div> 
 
 <div class="col-12"> 
+  <h2>Variable-2</h2>
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
@@ -28,6 +30,7 @@
 
 
 <div class="col-12"> 
+  <h2>Variable-3</h2>
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
@@ -40,6 +43,7 @@
 </div>
 
 <div class="col-12"> 
+  <h2>Variable-4</h2>
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
@@ -52,6 +56,7 @@
 </div>
 
 <div class="col-12"> 
+  <h2>Variable-5</h2>
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
