--- a/src/app/angular-material/header/header.component.html
+++ b/src/app/angular-material/header/header.component.html
@@ -7,10 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="./home">Home</a>
+            <a class="nav-link active" aria-current="page" routerLink="./home" >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="./testing-com">Testing-Component</a>
+            <a class="nav-link active" aria-current="page">Testing-Component</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -20,7 +20,7 @@
               Dropdown
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" routerLink="/AngularMaterial" target=”_blank”>Angular-material</a></li>
+              <li><a class="dropdown-item">Angular-material</a></li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
