--- a/src/app/angular-material/mat-tab-forms/form1/form1.component.html
+++ b/src/app/angular-material/mat-tab-forms/form1/form1.component.html
@@ -3,24 +3,15 @@
 
     <div class="col-12"> 
       <h2>Variable-1</h2>
-<!-- <mat-form-field> -->
+<mat-form-field>
     <mat-label>Select</mat-label>
-    <ng-select
-    class="select"
-    [items]="[{ name: 'Header' }, { name: 'Footer' }]"
-    id="type"
-    placeholder="Select"
-    bindLabel="name"
-
-  >
-  </ng-select>
-    <!-- <mat-select >
+    <mat-select >
       <mat-option>None</mat-option>
       <mat-option value="option1">Option 1</mat-option>
       <mat-option value="option2">Option 2</mat-option>
       <mat-option value="option3">Option 3</mat-option>
-    </mat-select> -->
-  <!-- </mat-form-field> -->
+    </mat-select>
+  </mat-form-field>
 </div> 
 
 <div class="col-12">
