--- a/src/app/angular-material/home/home.component.html
+++ b/src/app/angular-material/home/home.component.html
@@ -3,7 +3,7 @@
 <mat-tab-group>
   <mat-tab label="From-1"> 
     <app-form1
-    [formwholedata]="FormDataToEmit"
+    [variablesOfMatTabs]="emitVariablesOfAngularMaterial"
     ></app-form1>
   </mat-tab>
   <mat-tab label="From-2">
