--- a/src/app/angular-material/mat-tab-forms/form1/form1.component.html
+++ b/src/app/angular-material/mat-tab-forms/form1/form1.component.html
@@ -5,11 +5,11 @@
       <h2>Variable-1</h2>
 <mat-form-field>
     <mat-label>Select</mat-label>
-    <mat-select >
-      <mat-option>None</mat-option>
-      <mat-option value="option1">Option 1</mat-option>
+    <mat-select>
+      <mat-option  *ngFor="let data of variablesToShowInSelector">{{data.variable1?.variable}}</mat-option>
+      <!-- <mat-option value="option1">Option 1</mat-option>
       <mat-option value="option2">Option 2</mat-option>
-      <mat-option value="option3">Option 3</mat-option>
+      <mat-option value="option3">Option 3</mat-option> -->
     </mat-select>
   </mat-form-field>
 </div> 
