--- a/src/app/angular-material/mat-tab-forms/form1/form1.component.html
+++ b/src/app/angular-material/mat-tab-forms/form1/form1.component.html
@@ -6,7 +6,7 @@
 <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select>
-      <mat-option  *ngFor="let data of variablesToShowInSelector">{{data.variable1?.variable}}</mat-option>
+      <mat-option  *ngFor="let data of variablesToShowInSelector?.variable1">{{data.variable}}</mat-option>
       <!-- <mat-option value="option1">Option 1</mat-option>
       <mat-option value="option2">Option 2</mat-option>
       <mat-option value="option3">Option 3</mat-option> -->
