--- a/src/app/angular-material/mat-tab-forms/form1/form1.component.html
+++ b/src/app/angular-material/mat-tab-forms/form1/form1.component.html
@@ -7,9 +7,6 @@
     <mat-label>Select</mat-label>
     <mat-select>
       <mat-option  *ngFor="let data of variablesToShowInSelector?.variable1">{{data.variable}}</mat-option>
-      <!-- <mat-option value="option1">Option 1</mat-option>
-      <mat-option value="option2">Option 2</mat-option>
-      <mat-option value="option3">Option 3</mat-option> -->
     </mat-select>
   </mat-form-field>
 </div> 
@@ -19,10 +16,7 @@
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
-      <mat-option>None</mat-option>
-      <mat-option value="option1">Option 1</mat-option>
-      <mat-option value="option2">Option 2</mat-option>
-      <mat-option value="option3">Option 3</mat-option>
+      <mat-option  *ngFor="let data of variablesToShowInSelector?.variable2">{{data.variable}}</mat-option>
     </mat-select>
   </mat-form-field>
 </div>
@@ -33,10 +27,7 @@
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
-      <mat-option>None</mat-option>
-      <mat-option value="option1">Option 1</mat-option>
-      <mat-option value="option2">Option 2</mat-option>
-      <mat-option value="option3">Option 3</mat-option>
+      <mat-option  *ngFor="let data of variablesToShowInSelector?.variable3">{{data.variable}}</mat-option>
     </mat-select>
   </mat-form-field>
 </div>
@@ -46,10 +37,7 @@
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
-      <mat-option>None</mat-option>
-      <mat-option value="option1">Option 1</mat-option>
-      <mat-option value="option2">Option 2</mat-option>
-      <mat-option value="option3">Option 3</mat-option>
+      <mat-option  *ngFor="let data of variablesToShowInSelector?.variable4">{{data.variable}}</mat-option>
     </mat-select>
   </mat-form-field>
 </div>
@@ -59,10 +47,7 @@
   <mat-form-field>
     <mat-label>Select</mat-label>
     <mat-select >
-      <mat-option>None</mat-option>
-      <mat-option value="option1">Option 1</mat-option>
-      <mat-option value="option2">Option 2</mat-option>
-      <mat-option value="option3">Option 3</mat-option>
+      <mat-option  *ngFor="let data of variablesToShowInSelector?.variable5">{{data.variable}}</mat-option>
     </mat-select>
   </mat-form-field>
 </div>
