--- a/src/app/angular-bootstrap/crud-main/crud-main.component.html
+++ b/src/app/angular-bootstrap/crud-main/crud-main.component.html
@@ -25,7 +25,7 @@
                      <input type="text" class="form-control" formControlName="last_name">
                  </div>
                  <div class="col-6">
-                 <select formControlName="variable3"  class="form-control" >
+                 <select formControlName="select1"  class="form-control" >
                     <option>option-1</option>
                     <option>option-2</option>
                     <option>option-3</option>
@@ -34,7 +34,7 @@
                 </select>
                  </div>
                  <div class="col-6">
-                    <select formControlName="variable3"  class="form-control" >
+                    <select formControlName="select2"  class="form-control" >
                         <option>option-1</option>
                         <option>option-2</option>
                         <option>option-3</option>
