--- a/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
+++ b/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
@@ -1,1 +1,54 @@
-<p>crud-listing works!</p>
+<h1 class="text-center mt-4">foodies-Analytics !</h1>
+<h4 class="text-center mt-4">Banner-<span style="color:#FFB000 ;">Image</span>-Analytics</h4>
+<table class="table table-striped table-hover table-sm">
+    <thead class="text-dark">
+      <tr>
+        <th class="text-center">#</th>
+        <th class="text-center">Banner Image</th>
+        <th class="text-center">Status</th>
+        <th class="text-center">status summary</th>
+        <th class="text-center">status summary</th>
+        <th class="text-center" colspan="2">Actions</th>
+
+      </tr>
+    </thead>
+    <tbody class="text-dark">
+      <tr>
+        <th class="text-center">1</th>
+        <td class="text-center text-dark">dfgfdg</td>
+        <td class="text-center">gbfgb</td>
+        <td class="text-center" >fgfgb</td>
+        <td class="text-center">ffgggg</td>
+        <td><i class="fa-solid fa-eye text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal"></i></td>
+        
+        <td class="text-center"><button class="btn btn-outline-danger" >Hard Delete</button></td>
+      </tr>
+      <tr>
+        <th class="text-center">1</th>
+        <td class="text-center text-dark">dfgfdg</td>
+        <td class="text-center">gbfgb</td>
+        <td class="text-center" >fgfgb</td>
+        <td class="text-center">ffgggg</td>
+        <td><i class="fa-solid fa-eye text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal" ></i></td>
+        <td class="text-center"><button class="btn btn-outline-danger" >Hard Delete</button></td>
+      </tr>
+      <tr>
+        <th class="text-center">1</th>
+        <td class="text-center text-dark">dfgfdg</td>
+        <td class="text-center">gbfgb</td>
+        <td class="text-center" >fgfgb</td>
+        <td class="text-center">ffgggg</td>
+        <td><i class="fa-solid fa-eye text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal" ></i></td>
+        <td class="text-center"><button class="btn btn-outline-danger" >Hard Delete</button></td>
+      </tr>
+      <tr>
+        <th class="text-center">1</th>
+        <td class="text-center text-dark">dfgfdg</td>
+        <td class="text-center">gbfgb</td>
+        <td class="text-center" >fgfgb</td>
+        <td class="text-center">ffgggg</td>
+        <td><i class="fa-solid fa-eye text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal" ></i></td>
+        <td class="text-center"><button class="btn btn-outline-danger" >Hard Delete</button></td>
+      </tr>
+    </tbody>
+  </table>
