--- a/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
+++ b/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
@@ -21,7 +21,7 @@
         <td class="text-center">{{userData.pin_code}}</td>
         <td><i class="fa-solid fa-eye text-info" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#exampleModal"></i></td>
     
-        <td class="text-center"><button class="btn btn-outline-danger">Hard Delete</button></td>
+        <td class="text-center"><button class="btn btn-outline-danger" (click)="deleteUserDataById(userData.id)">Hard Delete</button></td>
       </tr>
     </tbody>
   </table>
