--- a/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
+++ b/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
@@ -58,7 +58,8 @@
                      <input type="text" class="form-control"  formControlName="last_name">
                  </div>
                  <div class="col-6">
-                 <select   class="form-control" >
+                  <label class="form-label text-secondary">Selector-1</label>
+                 <select  formControlName="select1" class="form-control" >
                     <option>option-1</option>
                     <option>option-2</option>
                     <option>option-3</option>
@@ -67,7 +68,8 @@
                 </select>
                  </div>
                  <div class="col-6">
-                    <select   class="form-control" >
+                  <label class="form-label text-secondary">Selector-2</label>
+                    <select formControlName="select2"  class="form-control" >
                         <option>option-1</option>
                         <option>option-2</option>
                         <option>option-3</option>
