--- a/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
+++ b/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
@@ -107,7 +107,7 @@
                  </div>
                 </div>
                 <div class="text-start mt-3">
-                  <button type="submit" class="btn px-4" style="background-color: #2ea963;color:white">Save Changes</button>
+                  <button type="submit" class="btn px-4" style="background-color: #2ea963;color:white">Update Changes</button>
                 </div>
           </div>
         </div>
