--- a/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
+++ b/src/app/angular-bootstrap/crud-listing/crud-listing.component.html
@@ -113,7 +113,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary">Update changes</button>
         </div>
       </div>
     </div>
