--- a/src/app/angular-material/home/home.component.html
+++ b/src/app/angular-material/home/home.component.html
@@ -9,7 +9,7 @@
       </mat-tab>
       <mat-tab label="From-2">
         <app-form2
-        [MyTestingData]="dataToSend"
+        [MyTestingData]="sendindata"
         [secondComponent]="dataToSend"
         >
       </app-form2>
