--- a/src/app/angular-bootstrap/state-crud/state-crud.component.html
+++ b/src/app/angular-bootstrap/state-crud/state-crud.component.html
@@ -3,7 +3,7 @@
       <div class="col-lg-12">
         <div class="card radius-10 Formcard">
           <div class="card-body">
-            <form [formGroup]="UserFrom" (ngSubmit)="SubmitUpdated()">
+            <form [formGroup]="UserFrom" (ngSubmit)="Submit()">
 
                 <h6 class="mb-0 mt-4 text-secondary">USER INFORMATION</h6>
                 <hr>
@@ -112,7 +112,7 @@
   </table>
 
 
-  <form [formGroup]="UpdateFrom">
+  <form [formGroup]="UpdateFrom"  (ngSubmit)="SubmitUpdated()">
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
